--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://192.168.2.41:3306/hr_test3?useUnicode=true&characterEncoding=utf8&useSSL=false&allowMultiQueries=true
+#jdbc.url=jdbc:mysql://192.168.2.41:3306/black?useUnicode=true&characterEncoding=utf8&useSSL=false&allowMultiQueries=true
 #jdbc.username=root
 #jdbc.password=richardsun
 
@@ -13,6 +13,5 @@ redis_ip=192.168.2.41
 redis_port=6379
 redis_pwd=Jc6EM0Acgp7rE
 
-
-login_return_url=http://192.168.4.6:8888/index/goIndex
-logout_url=http://192.168.4.6:8888/login/loginOut
+login_redirect_url= /index/goIndex
+logout_url= /login/loginOut
