--- a/pom.xml
+++ b/pom.xml
@@ -228,6 +228,26 @@
       <version>1.18.10</version>
     </dependency>
 
+    <!-- test -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <!--<scope>test</scope>-->
+    </dependency>
+    <dependency>
+      <groupId>com.jayway.jsonpath</groupId>
+      <artifactId>json-path-assert</artifactId>
+      <version>0.8.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <version>4.2.6.RELEASE</version>
+      <!--<scope>test</scope>-->
+    </dependency>
+
+
   </dependencies>
 
   <build>
