修改配置文件

--- a/src/main/resources/environment/test/config.properties
+++ b/src/main/resources/environment/test/config.properties
@@ -1,8 +1,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://192.168.2.41:3306/black?useUnicode=true&characterEncoding=utf8&useSSL=false&allowMultiQueries=true
-#jdbc.username=root
-#jdbc.password=richardsun
-
 
 jdbc.url=jdbc:mysql://127.0.0.1:3306/black?useUnicode=true&characterEncoding=utf8&useSSL=false&allowMultiQueries=true
 jdbc.username=root
@@ -11,6 +7,6 @@ jdbc.password=123456
 #redis≈‰÷√
 redis_ip=192.168.2.41
 redis_port=6379
-redis_pwd=Jc6EM0Acgp7rE
+redis_pwd=
 
 login_redirect_url= /index/goIndex
