--- a/src/main/resources/environment/prod/config.properties
+++ b/src/main/resources/environment/prod/config.properties
@@ -1,12 +1,12 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.2.41:3306/black?useUnicode=true&characterEncoding=utf8&useSSL=false&allowMultiQueries=true
+jdbc.url=jdbc:mysql://127.0.0.1:3306/black?useUnicode=true&characterEncoding=utf8&useSSL=false&allowMultiQueries=true
 jdbc.username=root
-jdbc.password=richardsun
+jdbc.password=123456
 
 
 #redis≈‰÷√
 redis_ip=127.0.0.1
 redis_port=6379
-redis_pwd=123456
+redis_pwd=
 
 login_redirect_url= /index/goIndex
