--- a/pom.xml
+++ b/pom.xml
@@ -245,6 +245,19 @@
       <version>1.18.10</version>
     </dependency>
 
+    <!-- 使用xls格式 要导入poi -->
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi</artifactId>
+      <version>4.1.0</version>
+    </dependency>
+    <!-- 使用xlsx格式 要导入poi-ooxml -->
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml</artifactId>
+      <version>4.1.0</version>
+    </dependency>
+
     <!-- test -->
     <dependency>
       <groupId>junit</groupId>
