--- a/pom.xml
+++ b/pom.xml
@@ -276,6 +276,11 @@
       <version>4.2.6.RELEASE</version>
       <!--<scope>test</scope>-->
     </dependency>
+      <dependency>
+          <groupId>org.apache.httpcomponents</groupId>
+          <artifactId>httpclient</artifactId>
+          <version>4.5.1</version>
+      </dependency>
   </dependencies>
 
   <profiles>
